maximized screen with a logic size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     canvas {
       background-color: black;
     }
+
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
   </style>
+
+
   <script src='practica3.js'></script>
 </head>
 
